# PySFedit

./: .drone.yml  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  Dockerfile.arm  GlyphEditor.py  MANIFEST.in  Readme.md  constants.py  context.py  edit_description_dialog.py  font_editor.py  glyph_editor.py  messages.pot  preferences_window.py  psflib.py  pysfedit  pysfedit.geany  pysfedit.py  setup.cfg  setup.py  test.asm  test_bytearray.py  testfont.psf
psflib/: __init__.py  asmutils.py  byteutils.py
pysfedit/: __init__.py  constants.py  edit_description_dialog.py  font_editor.py  glyph_editor.py  preferences_window.py
pysfedit/psflib/: __init__.py  asmutils.py  byteutils.py
pysfedit/psflib/tests/: __init__.py  data_for_testing.py  test_asmparser.py  test_byte.py  test_bytearray.py  test_exporters.py  test_importers.py  test_unicode_description.py
pysfedit/res/locale/: pysfedit.pot
pysfedit/res/locale/de_DE/LC_MESSAGES/: pysfedit.mo  pysfedit.po
pysfedit/tests/: __init__.py  skeleton.py  test_edit_description_dialog.py  test_font_editor.py  test_new_font_dialog.py  test_preferences_window.py  test_start_application.py  test_storage.py
res/locale/: pysfedit.pot
res/locale/de_DE/LC_MESSAGES/: pysfedit.mo  pysfedit.po
tests/: data_for_testing.py  test_exporters.py  test_importers.py  test_psflib_asmexporter.py  test_psflib_asmimporter.py  test_psflib_asmparser.py  test_psflib_byte.py  test_psflib_bytearray.py  test_psflib_psfexporter.py  test_psflib_psfgzexporter.py  test_psflib_psfgzimporter.py  test_psflib_psfimporter.py
