[metadata]
name = PySFedit
version = attr: pysfedit.__version__
description = An editor for pc screen fonts
author = Karsten Lehmann
author_email = ka.lehmann@yahoo.com
license = GNU GENERAL PUBLIC LICENSE Version 3
url = -
long_description = An editor for psf files written in python3.

[options]
zip_safe = False
include_package_data = True
packages = .
install_requires = 
	pygobject
	pillow
	pycairo
